Coverity analysis defect 150762: Uninitialized scalar field

XMLWordPrintableJSON

    • Networking & Observability
    • Fully Compatible
    • ALL
    • N&O 2025-08-18
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/ftdc/file_reader.h:134: UNINIT_CTOR 150762 Class member declaration for "_type".
      /src/mongo/db/ftdc/file_reader.h:59: UNINIT_CTOR 150762 Non-static class member "_type" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Cole Harbeck
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: