SERVER-109036 Ensure _type member is initialized in FTDCFileReader (#39978)

GitOrigin-RevId: aedd27b43a509daeeedbf90b06b4989c1d2c3461